--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#header" class="button scrolly">back to top</a></li>
 				</ul>
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://github.com/HyungsupPark" class="icon brands alt fa-github"><span class="label">Github</span></a></li>
 					<li><a href="https://www.linkedin.com/in/hyungsup-park/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 				</ul>
 				<ul class="copyright">
