--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<!-- Projects -->
 			<section id="projects" class="main style1">
 				<div class="container">
-					<header class="major special">
+					<header class="special">
 						<h2>
 							<strong>PROJECTS</strong>
 						</h2>
@@ -65,7 +65,7 @@
 							<span class="image fit"><img src="images/mindcraft3d_thumb.jpg" alt="" /></span>
 							<h3>MindCraft3D</h3>
 							<p>
-								In a team of <strong>6</strong>, we designed a professional FDM 3D printer "MindCraft3D", using <strong>SolidWorks</strong>. 
+								In a team of <b>6</b>, we designed a professional FDM 3D printer "MindCraft3D", using <b>SolidWorks</b>. 
 								The printer features a liquid cooling device and an auto-levelling pressure sensor.
 							<ul class="actions special">
 								<li><a href="https://drive.google.com/drive/folders/1g-iNmJ-BJYVIc3hnPyenftdSeg0wJaXC?usp=sharing" class="button">More</a></li>
@@ -143,7 +143,7 @@
 		<!-- Skills -->
 			<section id="skills" class="main style1 special">
 				<div class="container">
-					<header class="major">
+					<header>
 						<h2>
 							<strong>SKILLS</strong>
 						</h2>
