--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<!--span class="icon solid major fa-cloud"></span-->
 					<ul class="actions special">
-						<li><a href="/assets/files/HarryPark_resume.pdf" class="button scrolly">Resume</a></li>
+						<li><a href="/assets/files/HyungsupPark_resume.pdf" class="button scrolly">Resume</a></li>
 					</ul>
 					<h1><strong>HYUNGSUP PARK</strong></h1>
 					<ul class="actions special">
@@ -490,7 +490,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://www.linkedin.com/in/hyungsup-park/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; HYUNGSUP PARK</li><!--li>Design: <a href="http://html5up.net">HTML5 UP</a></li-->
+					<li>&copy; HYUNGSUP PARK</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
